Fix background attachment issues on mobile

--- a/src/components/Layout/Header/Header.module.css
+++ b/src/components/Layout/Header/Header.module.css
@@ -5,7 +5,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
-    background-attachment: fixed;
+    background-attachment: scroll;
 }
 
 .HeaderText {
